--- a/Aufgabe_4/Pokemon.html
+++ b/Aufgabe_4/Pokemon.html
@@ -38,24 +38,27 @@
             <div>
                 <img src="poke/bag.jpg" alt="eevee"> 
                 <div class="info">Evoli Rucksack<br>
-                    <p>weißer Rucksack mit Evoli Theme</p>
+                    <p>weißer Rucksack im Evoli Design</p>
                     20€               
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                     </div>
             </div>
             <div><img src="poke/beanbag.jpg" alt="beanbag">
                 <div class="info">Relaxo Sitzsack<br>
+                    <p>1,20m, weich, Relaxo</p>
                 100€</div>
                 <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             <div><img src="poke/cap.jpg" alt="cap">
                 <div class="info">Detektiv Pikachu<br>
+                    <p>Detektiv Mütze mit Pikachu Ohren</p>
                     15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="poke/cap2.jpg" alt="cap2">
-                <div class="info">Mütze<br>
+                <div class="info">Zurrokex Mütze<br>
+                    <p>Mütze im Zurrokex Design</p>
                     15€          
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
@@ -63,13 +66,15 @@
 
             <div>
                 <img src="poke/eevee.jpg" alt="cap2">
-                <div class="info">Evolie Figuren<br>
+                <div class="info">Evoli Figuren<br>
+                    <p>Evolis sind abnehmbar</p>
                     20€               
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="poke/mug.jpg" alt="tasse">
                     <div class="info"> Gengar Tasse<br>
+                    <p>Lila Tasse mit Gengars Gesicht</p>
                     7€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
@@ -77,12 +82,14 @@
             <div><img src="poke/plush1.jpg" alt="Relaxo">
                 <div class="info">Relaxo Plüschtier            
                     <br>
+                    <p>sehr weiches Relaxo</p>
                     15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="poke/plush2.jpg" alt="plushy">
                 <div class="info">Wolly Plüschtier<br>
+                    <p>sehr weiches Wolly</p>
                     15€          
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
@@ -90,13 +97,14 @@
 
             <div><img src="poke/plush3.jpg" alt="plush">
                 <div class="info">Pikachu Plüschtier<br>
+                    <p>Pikachu macht sein Abschluss</p>
                     20€               
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="poke/plush4.jpg" alt="plush">
                 <div class="info">Ditto Plüschtier<br>
-                    7€
+                    <p>Passt zu jeder Einrichtung
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
