--- a/Aufgabe_4/starwars.html
+++ b/Aufgabe_4/starwars.html
@@ -39,6 +39,7 @@
         <div>
             <img src="sw/babybag.jpg" alt="baby yoda">
             <div class="info">Baby Yoda Rucksack<br>
+                <p>Kinderrucksack</p>
                 30€
                 <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
             </div>
@@ -46,68 +47,69 @@
         <div>
             <img src="sw/babyyoda.jpg" alt="baby yoda">
             <div class="info">Baby Yoda<br>
-                Preis 40€
+                <p>Perfekte Einrichtung</p>
+                40€
                 <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
             </div>
         </div>
         <div><img src="sw/brotdose-bb-8.jpg" alt="BROT">
-            <div class="info">BB8 Brotdoes<br>
+            <div class="info">BB8 Brotdoes<br><p>Luftdicht</p>
                 15€
                 <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
         </div>
         <div><img src="sw/ewokbag.jpg" alt="ewok">
-            <div class="info">Ewok Rucksack<br>
+            <div class="info">Ewok Rucksack<br><p>Sehr flauschig</p>
                 30€
                 <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
             </div>
         </div>
 
         <div><img src="sw/lightsaber.jpg" alt="lichtschwert">
-                <div class="info">Lichtschwert<br>
+                <div class="info">Lichtschwert<br><p>RGB!</p>
                     150€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/mug.jpg" alt="tasse">
-                <div class="info">Tasse D-O<br>
+                <div class="info">Tasse D-O<br><p>Spülmaschinengeeignet</p>
                     7€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/mug2.jpg" alt="tasse">
-                <div class="info">Tasse BB8<br>
+                <div class="info">Tasse BB8<br><p>Spülmaschinengeeignet</p>
                     7€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/porg.jpg" alt="porg">
-                <div class="info">Tasse Porg<br>
+                <div class="info">Tasse Porg<br><p>Spülmaschinengeeignet</p>
                     7€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
 
             <div><img src="sw/coffee.jpg" alt="coffee">
-                <div class="info">R2D2 Kaffekanne<br>
+                <div class="info">R2D2 Kaffekanne<br><p>Spülmaschinengeeignet</p>
                     30€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/Pot.jpg" alt="pot">
-                <div class="info">R2D2 Reiskocher<br>
+                <div class="info">R2D2 Reiskocher<br><p>Ant-Haft-Beschichtet</p>
                     90€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/toaster.jpg" alt="toaster">
-                <div class="info">Darth Vader Toaster<br>
+                <div class="info">Darth Vader Toaster<br><p>Perfekt für jedes Frühstück</p>
                     30€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/waffels.jpg" alt="waffels">
-                <div class="info">Star Wars Waffeleisen<br>
+                <div class="info">Star Wars Waffeleisen<br><p>Todesstern Waffeln!</p>
                     30€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
