--- a/Aufgabe_4/Pokemon.html
+++ b/Aufgabe_4/Pokemon.html
@@ -82,14 +82,14 @@
             <div><img src="poke/plush1.jpg" alt="Relaxo">
                 <div class="info">Relaxo Plüschtier            
                     <br>
-                    <p>sehr weiches Relaxo</p>
+                    <p>Sehr weiches Relaxo</p>
                     15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="poke/plush2.jpg" alt="plushy">
                 <div class="info">Wolly Plüschtier<br>
-                    <p>sehr weiches Wolly</p>
+                    <p>Sehr weiches Wolly</p>
                     15€          
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
@@ -104,18 +104,20 @@
             </div>
             <div><img src="poke/plush4.jpg" alt="plush">
                 <div class="info">Ditto Plüschtier<br>
-                    <p>Passt zu jeder Einrichtung
+                    <p>Passt zu jeder Einrichtung</p>
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="poke/pokego.png" alt="pokego">                
                 <div class="info">Poké-Ball Schüssel<br>
+                    <p>Für jede Snacks und Pokemon!</p>
                     15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="poke/poster.jpg" alt="poster">                
                 <div class="info">Poster<br>
+                    <p>Gen 1 Poster</p>
                     15€          
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
