--- a/Aufgabe_4/Pokemon.html
+++ b/Aufgabe_4/Pokemon.html
@@ -38,7 +38,7 @@
             <div>
                 <img src="poke/bag.jpg" alt="eevee"> 
                 <div class="info">Evoli Rucksack<br>
-                    <p>weißer Rucksack im Evoli Design</p>
+                    <p>weißer Rucksack - Evoli Design</p>
                     20€               
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                     </div>
@@ -51,7 +51,7 @@
                 </div>
             <div><img src="poke/cap.jpg" alt="cap">
                 <div class="info">Detektiv Pikachu<br>
-                    <p>Detektiv Mütze mit Pikachu Ohren</p>
+                    <p>Mütze mit Pikachu Ohren</p>
                     15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
@@ -110,7 +110,7 @@
             </div>
             <div><img src="poke/pokego.png" alt="pokego">                
                 <div class="info">Poké-Ball Schüssel<br>
-                    <p>Für jede Snacks und Pokemon!</p>
+                    <p>Spülmaschinengeeignet</p>
                     15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
