--- a/Aufgabe_4/starwars.html
+++ b/Aufgabe_4/starwars.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div><img src="sw/brotdose-bb-8.jpg" alt="BROT">
-            <div class="info">BB8 Brotdoes<br><p>Luftdicht</p>
+            <div class="info">BB8 Brotdose<br><p>Luftdicht</p>
                 15€
                 <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
