--- a/Aufgabe_4/Pokemon.html
+++ b/Aufgabe_4/Pokemon.html
@@ -38,7 +38,7 @@
             <div>
                 <img src="poke/bag.jpg" alt="eevee"> 
                 <div class="info">Evoli Rucksack<br>
-                    <p>weißer Rucksack - Evoli Design</p>
+                    <p>Rucksack - Evoli Design</p>
                     20€               
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                     </div>
@@ -46,7 +46,7 @@
             <div><img src="poke/beanbag.jpg" alt="beanbag">
                 <div class="info">Relaxo Sitzsack<br>
                     <p>1,20m, weich, Relaxo</p>
-                100€</div>
+                    100€</div>
                 <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             <div><img src="poke/cap.jpg" alt="cap">
@@ -105,6 +105,7 @@
             <div><img src="poke/plush4.jpg" alt="plush">
                 <div class="info">Ditto Plüschtier<br>
                     <p>Passt zu jeder Einrichtung</p>
+                    15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
