--- a/Aufgabe_4/clothing.html
+++ b/Aufgabe_4/clothing.html
@@ -38,31 +38,35 @@
             <div>
                 <img src="sw/babybag.jpg" alt="baby yoda">
                 <div class="info">Baby Yoda Rucksack<br>
+                    <p>Kinderrucksack</p>
                     30€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/ewokbag.jpg" alt="ewok">
-                <div class="info">Ewok Rucksack<br>
+                <div class="info">Ewok Rucksack<br><p>Sehr flauschig</p>
                     30€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div>
                 <img src="poke/bag.jpg" alt="eevee"> 
-                <div class="info">EVOLI RUCKSACK<br>
+                <div class="info">Evoli Rucksack<br>
+                    <p>Rucksack - Evoli Design</p>
                     20€               
-                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>                   
-                </div>
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
+                    </div>
             </div>
             <div><img src="poke/cap.jpg" alt="cap">
                 <div class="info">Detektiv Pikachu<br>
+                    <p>Mütze mit Pikachu Ohren</p>
                     15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="poke/cap2.jpg" alt="cap2">
-                <div class="info">Mütze<br>
+                <div class="info">Zurrokex Mütze<br>
+                    <p>Mütze im Zurrokex Design</p>
                     15€          
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
