--- a/Aufgabe_4/home.html
+++ b/Aufgabe_4/home.html
@@ -37,89 +37,93 @@
         <div class="shop">
             <div><img src="poke/beanbag.jpg" alt="beanbag">
                 <div class="info">Relaxo Sitzsack<br>
+                    <p>1,20m, weich, Relaxo</p>
                     100€</div>
+                <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
+            </div>
+            <div><img src="poke/pokego.png" alt="pokego">                
+                <div class="info">Poké-Ball Schüssel<br>
+                    <p>Spülmaschinengeeignet</p>
+                    15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
-                <div><img src="poke/pokego.png" alt="pokego">                
-                    <div class="info">Poké-Ball Schüssel<br>
-                        15€
-                        <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
-                        </div>
-                </div>
-                <div><img src="poke/poster.jpg" alt="poster">                
-                    <div class="info">Poster<br>
-                        15€          
-                        <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
-                    </div>
-                </div>
-                <div>
-                    <img src="poke/eevee.jpg" alt="cap2">
-                    <div class="info">Evolie Figuren<br>
-                        20€               
-                        <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
-                    </div>
-                </div>
-                
-                <div><img src="poke/mug.jpg" alt="tasse">
-                        <div class="info">Gengar Tasse<br>
-                        7€
-                        <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
-                    </div>
-                </div>
-                <div><img src="sw/brotdose-bb-8.jpg" alt="brot">
-            <div class="info">BB8 Brotdoes<br>
-                15€
-                <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
+            </div>
+            <div><img src="poke/poster.jpg" alt="poster">                
+                <div class="info">Poster<br>
+                    <p>Gen 1 Poster</p>
+                    15€          
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
+            <div><img src="poke/eevee.jpg" alt="cap2">
+                <div class="info">Evoli Figuren<br>
+                    <p>Evolis sind abnehmbar</p>
+                    20€               
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
+                </div>
+            </div>
+            <div><img src="poke/mug.jpg" alt="tasse">
+                    <div class="info"> Gengar Tasse<br>
+                    <p>Lila Tasse mit Gengars Gesicht</p>
+                    7€
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
+                </div>
+            </div>
+            <div><img src="sw/brotdose-bb-8.jpg" alt="BROT">
+                <div class="info">BB8 Brotdose<br><p>Luftdicht</p>
+                    15€
+                    <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
+                    </div>
+            </div>
             <div><img src="sw/lightsaber.jpg" alt="lichtschwert">
-                <div class="info">Lichtschwert<br>
+                <div class="info">Lichtschwert<br><p>RGB!</p>
                     150€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/mug.jpg" alt="tasse">
-                <div class="info">Tasse D-O<br>
+                <div class="info">Tasse D-O<br><p>Spülmaschinengeeignet</p>
                     7€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/mug2.jpg" alt="tasse">
-                <div class="info">Tasse BB8<br>
+                <div class="info">Tasse BB8<br><p>Spülmaschinengeeignet</p>
                     7€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/porg.jpg" alt="porg">
-                <div class="info">Tasse Porg<br>
+                <div class="info">Tasse Porg<br><p>Spülmaschinengeeignet</p>
                     7€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
 
             <div><img src="sw/coffee.jpg" alt="coffee">
-                <div class="info">R2D2 Kaffekanne<br>
+                <div class="info">R2D2 Kaffekanne<br><p>Spülmaschinengeeignet</p>
                     30€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/Pot.jpg" alt="pot">
-                <div class="info">R2D2 Reiskocher<br>
+                <div class="info">R2D2 Reiskocher<br><p>Ant-Haft-Beschichtet</p>
                     90€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/toaster.jpg" alt="toaster">
-                <div class="info">Darth Vader Toaster<br>
+                <div class="info">Darth Vader Toaster<br><p>Perfekt für jedes Frühstück</p>
                     30€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="sw/waffels.jpg" alt="waffels">
-                <div class="info">Star Wars Waffeleisen<br>
+                <div class="info">Star Wars Waffeleisen<br><p>Todesstern Waffeln!</p>
                     30€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
+            </div>
             </div>
 
         </div>
