--- a/Aufgabe_4/plush.html
+++ b/Aufgabe_4/plush.html
@@ -38,12 +38,14 @@
             <div><img src="poke/plush1.jpg" alt="Relaxo">
                 <div class="info">Relaxo Plüschtier            
                     <br>
+                    <p>Sehr weiches Relaxo</p>
                     15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="poke/plush2.jpg" alt="plushy">
                 <div class="info">Wolly Plüschtier<br>
+                    <p>Sehr weiches Wolly</p>
                     15€          
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
@@ -51,20 +53,23 @@
 
             <div><img src="poke/plush3.jpg" alt="plush">
                 <div class="info">Pikachu Plüschtier<br>
+                    <p>Pikachu macht sein Abschluss</p>
                     20€               
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div><img src="poke/plush4.jpg" alt="plush">
                 <div class="info">Ditto Plüschtier<br>
-                    7€
+                    <p>Passt zu jeder Einrichtung</p>
+                    15€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
             <div>
                 <img src="sw/babyyoda.jpg" alt="baby yoda">
                 <div class="info">Baby Yoda<br>
-                    Preis 40€
+                    <p>Perfekte Einrichtung</p>
+                    40€
                     <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
                 </div>
             </div>
