--- a/Aufgabe_4/starwars.html
+++ b/Aufgabe_4/starwars.html
@@ -38,7 +38,7 @@
     <div class="shop">
         <div>
             <img src="sw/babybag.jpg" alt="baby yoda">
-            <div class="info">Baby Yoda Rucksack<br>
+            <div class="info">Yoda Rucksack<br>
                 <p>Kinderrucksack</p>
                 30€
                 <div class="drop"><img src="heart.png" alt="HEART"><img src="cart.png" alt="cart"></div>
