--- a/Aufgabe_4/home.html
+++ b/Aufgabe_4/home.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Home & Office - Pokestar</title>
         <link rel="stylesheet" href="theme4.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="head">
