--- a/Aufgabe_4/startseite.html
+++ b/Aufgabe_4/startseite.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Startseite - Pokestar</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="theme4.css">
     </head>
     <body>
