--- a/Portfolio_CJS/adobe.html
+++ b/Portfolio_CJS/adobe.html
@@ -69,8 +69,8 @@
         <h3>Anzeigen</h3>
         </div>
         <div class="anzeige"> 
-            <img src="Anzeige1.jpg">
-            <img src="Anzeige2.jpg">
+            <img src="Anzeige1.jpg" alt="anzeige apotheke">
+            <img src="Anzeige2.jpg" alt="anzeige apotheke">
         </div>
         <footer>
             <a href="Portfolio_CJS.html">Home</a>
