--- a/Aufgabe_5/plush.html
+++ b/Aufgabe_5/plush.html
@@ -5,7 +5,7 @@
         <title>Plush - Pokestar</title>
         <link rel="stylesheet" href="theme5.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="plush.js" defer></script>
+        <script src="plushy.js" defer></script>
     </head>
     <body>
         <div class="head">
