--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,7 +12,8 @@ body {
 </style>
 </head>
 <body>
-	<a href="https://github.com/sailerco/GIS_MIB2/issues" target="_blank">Issues</a><br>	
+	<a href="https://github.com/sailerco/GIS_MIB2/issues" target="_blank">Issues</a><br>
+	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_6/startseite.html" target="_blank">Aufgabe 6, 3.6.2020 </a> <br>	
 	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_5/startseite.html" target="_blank">Aufgabe 5, 29.5.2020 </a> <br>
 	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_4/startseite.html" target="_blank">Aufgabe 4, 20.5.2020 </a> <br>
 	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_3/Portfolio_2.html" target="_blank">Aufgabe 3, 16.5.2020 </a> <br>
