--- a/Aufgabe_6/startseite.html
+++ b/Aufgabe_6/startseite.html
@@ -11,9 +11,9 @@
         <div class="head">
         <header>
             <a href="startseite.html"><img src="Pokestar1.jpg" alt="Logo"></a>
-            <a href="startseite.html"><h1>Pokéstar</h1></a>
+            <a href="startseite.html" ><h1>Pokéstar</h1></a>
                 <div class="cart">
-                    <div class="cart1"><a href="startseite.html"><img src="zuhause.png" alt="hone"></a>
+                    <div class="cart1" id="home"><img src="zuhause.png" alt="hone"></a>
                     Home</div>
                     <div class="cart1"><img src="heart.png" alt="HEART" id="heart">
                     Like</div>
