--- a/Aufgabe_7/startseite.html
+++ b/Aufgabe_7/startseite.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="theme6.css">
         <script src="sktipten7.js" defer></script>
-        <script src="artikel.js" defer></script>
+        <script src="interface.js" defer></script>
     </head>
     <body>
         <div class="head">
@@ -18,16 +18,16 @@
                     Home</div>
                     <div class="cart1"><img src="heart.png" alt="HEART" id="heart">
                     Like</div>
-                    <div class="cart1"><img src="cart.png" alt="cart" id="cart1"> <span id="count"></span>
+                    <div class="cart1"><a href="cart.html"><img src="cart.png" alt="cart" id="cart1"></a> <span id="count"></span>
                     Cart    
                     </div>
                 </div>
         </header>
        
-            <nav>
-                <div id="swlogo"><img src="sw_logo.png" alt="Logo"></div>
-                <div id="pokelogo"><img src="Pokemon-Logo.jpg" alt=Logo></div>
-            </nav>
+        <nav>
+            <div id="swlogo"><img src="sw_logo.png" alt="Logo"></div>
+            <div id="pokelogo"><img src="Pokemon-Logo.jpg" alt=Logo></div>
+        </nav>
         </div>
           <p id="poke"> Pokémon </p> 
           <div id="shop1">
