--- a/Aufgabe_7/cart.html
+++ b/Aufgabe_7/cart.html
@@ -15,7 +15,7 @@
             <a href="startseite.html"><img src="Pokestar1.jpg" alt="Logo"></a>
             <a href="startseite.html" ><h1>Pokéstar</h1></a>
                 <div class="cart">
-                    <div class="cart1" id="home"><img src="zuhause.png" alt="hone"></a>
+                    <div class="cart1" id="home"><img src="zuhause.png" alt="hone">
                     Home</div>
                     <div class="cart1"><img src="heart.png" alt="HEART" id="heart">
                     Like</div>
