--- a/Aufgabe_8/form.html
+++ b/Aufgabe_8/form.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="https://dedflake.herokuapp.com/" method="get">
+    <form>
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" value=""><br>
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname" value=""><br><br>
-        <button type="submit">Abgeben</button>
+        <button type="submit" id="button">Abgeben</button>
       </form>
 </body>
 </html>
