--- a/Aufgabe_8/form.html
+++ b/Aufgabe_8/form.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="servertest.js" defer></script>
 </head>
 <body>
-    <form>
+    <form method="GET" action="https://dedflake.herokuapp.com/">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" value=""><br>
         <label for="lname">Last name:</label><br>
