--- a/Aufgabe_8/form.html
+++ b/Aufgabe_8/form.html
@@ -7,7 +7,7 @@
     <script src="servertest.js" defer></script>
 </head>
 <body>
-    <form action="https://dedflake.herokuapp.com/">
+    <form action="https://dedflake.herokuapp.com/" method="GET">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" value=""><br>
         <label for="lname">Last name:</label><br>
