--- a/Aufgabe_8/form.html
+++ b/Aufgabe_8/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="servertest.js" defer></script>
+    <script src="client.js" defer></script>
 </head>
 <body>
     <form action="https://dedflake.herokuapp.com/" method="GET">
