--- a/Aufgabe_8/form.html
+++ b/Aufgabe_8/form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>formular</title>
     <script src="client.js" defer></script>
     <link rel="stylesheet" href="theme8.css">
 </head>
