--- a/Aufgabe_8/form.html
+++ b/Aufgabe_8/form.html
@@ -14,7 +14,7 @@
         <input type="text" id="fname" name="fname" value=""><br>
         <label for="Nachname">Nachname:</label><br>
         <input type="text" id="lname" name="lname" value=""><br>
-        Ananas Pizza?<br>
+        Ananas Pizza ist lecker?<br>
         <input type="radio" id="no" name="Ananas" value="no">
         <label for="no">Ja (falsch)</label><br>
         <input type="radio" id="ja" name="Ananas" value="ja">
