--- a/Aufgabe_8/form.html
+++ b/Aufgabe_8/form.html
@@ -10,10 +10,10 @@
 <body>
     <h1>Umfrage</h1>
     <form action="https://dedflake.herokuapp.com/" method="GET">
-        <label for="Vorname">Vorname:</label><br>
-        <input type="text" id="fname" name="fname" value=""><br>
-        <label for="Nachname">Nachname:</label><br>
-        <input type="text" id="lname" name="lname" value=""><br>
+        <label for="name" >Vorname:</label><br>
+        <input type="text" id="name" name="fname" value=""><br>
+        <label for="nachname">Nachname:</label><br>
+        <input type="text" id="nachname" name="lname" value=""><br>
         Ananas Pizza ist lecker?<br>
         <input type="radio" id="no" name="Ananas" value="no">
         <label for="no">Ja (falsch)</label><br>
