--- a/Aufgabe_9/form2.html
+++ b/Aufgabe_9/form2.html
@@ -10,12 +10,11 @@
 <body>
     <h1>Umfrage</h1>
     <!-- <form action="https://dedflake.herokuapp.com/" method="GET"> -->
-      <form action="https://dedflake.herokuapp.com">
+      <form action="http://localhost:8100">
         <label for="name" >Vorname:</label><br>
         <input type="text" id="name" name="fname" value=""><br>
         <label for="nachname">Nachname:</label><br>
         <input type="text" id="nachname" name="lname" value=""><br>
-        Ananas Pizza ist lecker?<br>
         <input type="radio" id="no" name="Ananas" value="no">
         <label for="no">Ja (falsch)</label><br>
         <input type="radio" id="ja" name="Ananas" value="ja">
