--- a/Aufgabe_9/form2.html
+++ b/Aufgabe_9/form2.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Umfrage</h1>
     <!-- <form action="https://dedflake.herokuapp.com/" method="GET"> -->
-      <form action="http://localhost:8100">
+      <form action="https://dedflake.herokuapp.com/">
         <label for="name" >Vorname:</label><br>
         <input type="text" id="name" name="fname" value=""><br>
         <label for="nachname">Nachname:</label><br>
