--- a/Aufgabe_11/formular.html
+++ b/Aufgabe_11/formular.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <script src="client.js" defer></script>
 </head>
-<body><!-- "http://localhost:8100" -->
+<body>
+    <!-- <form action="http://localhost:8100" id="form"> -->
     <form action="https://dedflake.herokuapp.com" id="form">
         <label for="name" >Vorname:</label><br>
         <input type="text" id="name" name="fname" value=""><br>
