--- a/Aufgabe_11/formular.html
+++ b/Aufgabe_11/formular.html
@@ -18,7 +18,7 @@
         <label for="Kommentar" >Extra Wümsche:</label><br>
         <input type="text" id="Kommentar" name="Kommentar" value=""><br> -->
         <button type="button" id="button">Abgeben</button>
-        <button type="button" id="jsonbutton">Give me!</button>
+        <button type="button" id="retrieve">Give me!</button>
         <button type="button" id="aaa">aaaa</button>
     </form>
     
