--- a/Aufgabe_11/formular.html
+++ b/Aufgabe_11/formular.html
@@ -13,10 +13,16 @@
         <input type="text" id="name" name="fname" value=""><br>
         <label for="nachname">Nachname:</label><br>
         <input type="text" id="nachname" name="lname" value=""><br>
-        <!-- <label for="Adresse" >Adresse:</label><br>
+        <label for="Adresse" >Adresse:</label><br>
         <input type="text" id="Adresse" name="adresse" value=""><br>
         <label for="Kommentar" >Extra Wümsche:</label><br>
-        <input type="text" id="Kommentar" name="Kommentar" value=""><br> -->
+        <input type="text" id="Kommentar" name="Kommentar" value=""><br>
+        <label for="sweet">choose one</label><br>
+        <select id="sweet" name="sweet">
+            <option value="Schokolade">Schokolade</option>
+            <option value="Gummi">Gummibärchen</option>
+            <option value="Chips">Chips</option>
+        </select><br>
         <button type="button" id="button">Abgeben</button>
         <button type="button" id="retrieve">Give me!</button>
         <button type="button" id="aaa">aaaa</button>
