--- a/Aufgabe_11/formular.html
+++ b/Aufgabe_11/formular.html
@@ -23,7 +23,7 @@
         </select><br>
         <button type="button" id="button">Abgeben</button>
         <button type="button" id="retrieve">Give me!</button>
-        <button type="button" id="aaa">aaaa</button>
+        <button type="button" id="delete">aaaa</button>
     </form>
     
 </body>
