--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,8 +13,9 @@ body {
 </head>
 <body>
 	<a href="https://github.com/sailerco/GIS_MIB2/issues" target="_blank">Issues</a><br>
+	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_11/formular.html">Aufgabe 11, 11.07.2020</a> <a href="https://github.com/sailerco/GIS_MIB2/blob/master/Aufgabe_11/server.ts"> server.ts</a>
 	<a href="https://mongodbnetbrowser.herokuapp.com/?u=cocosailer&p=qJjLWY&a=clustergis-nrwvt.mongodb.net&n=Test&c=Students" target="_blank">Aufgabe 10, 29.6.2020</a><br>
-	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_9/form2.html" target="blank">Aufgabe 9, 25.6.2020</a><a href="https://github.com/sailerco/GIS_MIB2/blob/master/Aufgabe_9/servertest.ts">Server.ts</a><br>
+	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_9/form2.html" target="blank">Aufgabe 9, 25.6.2020</a><a href="https://github.com/sailerco/GIS_MIB2/blob/master/Aufgabe_9/servertest.ts"> Server.ts</a><br>
 	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_8/form.html" target="_blank">Aufgabe 8, 19.6.2020 </a> <br>
 	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_7/startseite.html" target="_blank">Aufgabe 7, 13.6.2020 </a> <br>
 	<a href="https://sailerco.github.io/GIS_MIB2/Aufgabe_6/startseite.html" target="_blank">Aufgabe 6, 3.6.2020 </a> <br>	
