--- a/IceCreamLand/staff.html
+++ b/IceCreamLand/staff.html
@@ -10,10 +10,11 @@
 <body>
     <div id="staff">
         <h1 id="headofstaff">Die letzten Bestellungen</h1>
-        <form action="http://localhost:8100" id="formular">
+        <form action="https://dedflake.herokuapp.com" id="formular"></form>
+        <!-- <form action="http://localhost:8100" id="formular"> -->
             <button type="button" id="retrieve">Refresh</button>
             <button type="button" id="delete">Alle löschen</button>
-            <button type="button" id="deletelast">Löschen der letzten Bestellung</button>
+            <!-- <button type="button" id="deletelast">Löschen der letzten Bestellung</button> -->
         </form>
         <div id="Bestellungen"></div>
     </div>
