--- a/IceCreamLand/kunde.html
+++ b/IceCreamLand/kunde.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
     <link rel="stylesheet" href="responsivetheme.css">
-    <link href='http://fonts.googleapis.com/css?family=Lobster+Two' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
     <script src="main.js" defer></script>
     <script src="client.js" defer></script>
 </head>
