--- a/IceCreamLand/kunde.html
+++ b/IceCreamLand/kunde.html
@@ -65,16 +65,16 @@
             <form action="//dedflake.herokuapp.com">
             <!-- <form action="http://localhost:8100"> -->
             <label for="name" >Vorname:</label><br>
-            <input type="text" id="name" name="Vorname" value=""><br>
+            <input type="text" id="name" name="Vorname" value="" required><br>
             <label for="nachname">Nachname:</label><br>
-            <input type="text" id="nachname" name="Nachname" value=""><br>
+            <input type="text" id="nachname" name="Nachname" value="" required><br>
             <label for="Straße" >Straße:</label><br>
-            <input type="text" id="Straße" name="Straße" value=""><br>
+            <input type="text" id="Straße" name="Straße" value="" required><br>
             <label for="Ort" >Wohnort:</label><br>
-            <input type="text" id="Ort" name="Ort" value=""><br>
+            <input type="text" id="Ort" name="Ort" value="" required><br>
             <label for="Kommentar" >Extra Wünsche:</label><br>
             <input type="text" id="Kommentar" name="Kommentar" value=""><br>
-            <button type="button" id="abgeben" >Abgeben</button>
+            <button type="submit" id="abgeben" >Abgeben</button>
             </form>
         </div>
         <button id="exit" type="button">Abbrechen</button>
