--- a/IceCreamLand/staff.html
+++ b/IceCreamLand/staff.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="responsivetheme.css">
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Damion&display=swap" rel="stylesheet">
     <script src="client2.js" defer></script>
 </head>
 <body>
@@ -15,7 +15,6 @@
         <!-- <form action="http://localhost:8100" id="formular"> -->
             <button type="button" id="retrieve">Refresh</button>
             <button type="button" id="delete">Alle löschen</button>
-            <!-- <button type="button" id="deletelast">Löschen der letzten Bestellung</button> -->
         </form>
         <div id="Bestellungen"></div>
     </div>
