--- a/IceCreamLand/kunde.html
+++ b/IceCreamLand/kunde.html
@@ -74,7 +74,8 @@
             <input type="text" id="Ort" name="Ort" value="" required><br>
             <label for="Kommentar" >Extra Wünsche:</label><br>
             <input type="text" id="Kommentar" name="Kommentar" value=""><br>
-            <input type="submit" id="abgeben" >Abgeben</input>
+            
+            <button type="submit" id="abgeben" >Abgeben</button>
             </form>
         </div>
         <button id="exit" type="button">Abbrechen</button>
