--- a/IceCreamLand/kunde.html
+++ b/IceCreamLand/kunde.html
@@ -62,7 +62,7 @@
     </div>
     <div id="order">
         <div id="form">
-            <form action="//dedflake.herokuapp.com" method="GET">
+            <form method="GET">
             <!-- <form action="http://localhost:8100"> -->
             <label for="name" >Vorname:</label><br>
             <input type="text" id="name" name="Vorname" value="" required><br>
