button to button

--- a/IceCreamLand/kunde.html
+++ b/IceCreamLand/kunde.html
@@ -62,7 +62,7 @@
     </div>
     <div id="order">
         <div id="form">
-            <form method="GET">
+            <form action="//dedflake.herokuapp.com" method="GET">
             <!-- <form action="http://localhost:8100"> -->
             <label for="name" >Vorname:</label><br>
             <input type="text" id="name" name="Vorname" value="" required><br>
@@ -74,7 +74,7 @@
             <input type="text" id="Ort" name="Ort" value="" required><br>
             <label for="Kommentar" >Extra Wünsche:</label><br>
             <input type="text" id="Kommentar" name="Kommentar" value=""><br>
-            <button type="submit" id="abgeben" action="//dedflake.herokuapp.com">Abgeben</button>
+            <button type="button" id="abgeben">Abgeben</button>
             </form>
         </div>
         <button id="exit" type="button">Abbrechen</button>
