--- a/IceCreamLand/kunde.html
+++ b/IceCreamLand/kunde.html
@@ -17,6 +17,7 @@
         <div class="next">
             <button id="button">Start</button>
         </div>
+        <a href="staff.html"><img src="staff.png" alt="staff" class="staff"></a>
     </div>
     <div id="becher">
         <img src="img/head5.png" alt="head" id="header">
@@ -79,6 +80,7 @@
         </div>
         <button id="exit" type="button">Abbrechen</button>
         <button type="button" id="surprise" >Überraschung</button>
+        <a href="staff.html"><img src="staff.png" alt="staff" class="staff"></a>
     </div>
 </body>
 </html>
