--- a/IceCreamLand/kunde.html
+++ b/IceCreamLand/kunde.html
@@ -55,7 +55,7 @@
     </div>
     <div id="realtoppings">
         <h1>And the sidekick?</h1>
-        <h2>and go crazy with the toppings</h2>
+        <h2>and go crazy with the toppings<br>(10 Cent pro Topping)</h2>
         <div id="top"></div>
         <div class="next">
             <button id="button4" type="button">Next</button>
