--- a/IceCreamLand/kunde.html
+++ b/IceCreamLand/kunde.html
@@ -78,8 +78,11 @@
             <button type="button" id="abgeben">Abgeben</button>
             </form>
         </div>
-        <button id="exit" type="button">Abbrechen</button>
-        <button type="button" id="surprise" >Überraschung</button>
+        <div id="last_buttons">
+          <button id="exit" type="button">Abbrechen</button>
+          <button type="button" id="surprise" >Überraschung</button>  
+        </div>
+        
         <a href="staff.html"><img src="staff.png" alt="staff" class="staff"></a>
     </div>
 </body>
